# zettelkasten

./: README.md  pyproject.toml
generator/: new_note.py  note.md.j2  test_new_note.py
notes/: 000-000-000_direnv-is-not-cross-shell.md  000-000-001_denormalization.md  000-000-002_foreign-keys-target-column.md  000-000-003_fact-vs-dimension.md  000-000-004_data-vault.md  000-000-005_entity-relationship-modelling.md  000-000-006_cap-theorem.md  000-000-007_pacelc-theorem.md  000-000-008_lookup-table.md  000-000-009_hcl-color-space.md  000-000-00A_wide-column-store.md  000-000-00B_strategy-pattern.md
