[tool.uv.build-backend]
module-name = "generator"
module-root = ""
 
[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[project]
name = "zettelkasten"
version = "0.1.0"
description = "Render a note from a pre-defined template"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "jinja2>=3.1.6",
    "tomli>=2.2.1",
]
