[tool.uv.build-backend]
module-name = "generator"
module-root = ""

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[project]
name = "zettelkasten"
version = "0.1.1"
description = "Render a note from a pre-defined template"
readme = "README.md"
requires-python = ">=3.12.0"
license = "CC-BY-4.0"
authors = [{ name = "ninoCan", email = "ninocangialosi@yahoo.it" }]
dependencies = [
    "jinja2>=3.1.6",
    "pybase62>=1.0.0"
]

[project.scripts]
new-note = "generator.new_note:main"


[tool.zettelkasten]
# relative path to destination folder
destination = "notes"